pink background to grey

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ Accordion Styling
 }
 .accordionTitle,
 .accordion__Heading {
- background-color:#d7006d;
+ background-color:#555;
    text-align:center;
      font-weight:700;
           padding:1em;
