--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ Accordion Styling
     transition: background-color 0.5s ease-in-out;
 }
 
+.accordion a:hover {
+    color: #ccc;
+}
 
 .accordionItem {
     height: auto;
